# UsageMeter

./: .gitignore  CHANGELOG.md  LICENSE  README.md  README_ZH.md  REVIEW.md  package-lock.json  package.json  rust-toolchain.toml  vite.config.ts
src-tauri/: Cargo.toml  tauri.conf.dev.json  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: autostart.rs  copilot.rs  currency.rs  mod.rs  model_pricing.rs  network_proxy.rs  proxy.rs  settings.rs  sources.rs  subscription.rs  sync.rs  updater.rs  usage.rs  window.rs
src-tauri/src/copilot/: auth.rs
src-tauri/src/local_usage/: database.rs  mod.rs
src-tauri/src/models/: mod.rs  pricing.rs  settings.rs  subscription.rs  usage.rs
src-tauri/src/net/: http_client.rs  mod.rs
src-tauri/src/proxy/: codex_api.rs  codex_config.rs  collector.rs  config_manager.rs  database.rs  forwarder.rs  gemini_api.rs  gemini_config.rs  gemini_forwarder.rs  mod.rs  openai_forwarder.rs  opencode_config.rs  opencode_protocol.rs  reasonix_config.rs  request_common.rs  response_bridge.rs  routing.rs  server.rs  source_detector.rs  source_registry.rs  sse.rs  stream_processor.rs  types.rs  url_identity.rs
src-tauri/src/session/: claude_reader.rs  codex_reader.rs  constants.rs  copilot_cli_reader.rs  gemini_reader.rs  hermes_reader.rs  meta.rs  mod.rs  openclaw_reader.rs  opencode_reader.rs  qoder_cli_reader.rs  qoder_ide_reader.rs  qoder_work_reader.rs  reasonix_reader.rs  registry.rs  scanner.rs  shared.rs  source.rs  wsl.rs
src-tauri/src/subscription/: claude.rs  copilot.rs  gemini.rs  gpt.rs  mod.rs  query_profiles.rs  relay.rs  source_quota.rs  source_quota_executor.rs  source_quota_secrets.rs  source_quota_util.rs  source_resolver.rs  types.rs  (+1 more)
(+127 files in other folders)
