[package]
name = "usagemeter"
version = "0.1.0"
description = "A lightweight tray application for monitoring Claude Code usage"
authors = ["Smileslove"]
license = "MIT"
repository = "https://github.com/smileslove/UsageMeter"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "usagemeter_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "macos-private-api"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5"
chrono = { version = "0.4", features = ["clock"] }

# Async runtime
tokio = { version = "1", features = ["rt-multi-thread", "net", "sync", "time", "macros"] }

# HTTP server and client
hyper = { version = "1", features = ["server", "http1"] }
hyper-util = { version = "0.1", features = ["tokio"] }
http-body-util = "0.1"
reqwest = { version = "0.12", features = ["json", "stream"] }

# Async utilities
futures = "0.3"
bytes = "1"
async-stream = "0.3"

# Database
rusqlite = { version = "0.32", features = ["bundled"] }
tempfile = "3"  # For testing

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
objc2-app-kit = { version = "0.3", features = ["NSWindow", "NSColor", "NSView", "NSGraphics"] }
objc2-foundation = { version = "0.3", features = ["NSObject"] }

